@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Mon Oct 15 17:47:29 2001 -->
+<!-- Tue Oct 16 13:40:35 2001 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -139,7 +139,9 @@ Author
 <h3>TMDA Configuration Overview</h3>
 
 Read the <em>Server Configuration</em> section, and then optionally
-<em>Client Configuration</em>.
+<em>Client Configuration</em> (both under the
+<strong>Configuration</strong> sidebar to the left).
+
 
 </TD><!-- end of body cell -->
 </TR><!-- end of sidebar/body row -->
