@@ -7,22 +7,24 @@ Links: overview-links.h usage-links.h support-links.h
 
 <li>Written entirely in <a href="http://www.python.org/" TARGET="Resource Window">Python</a>:
 an interpreted, interactive, object-oriented programming language.
-
 <br><br>
 
 <li>Active and open development.<br><br>
 
+<li>MTA independent (supports Postfix and qmail currently).
+<br><br>
+
 <li>Integrated "blacklist" and "whitelist" functionality.
 <br><br>
 
-<li>Supports MUA-independent, site-wide installations using qmail-relay rewriting, including
+<li>Supports MUA-independent, site-wide installations using relay rewriting, including
     non-unix clients such as Microsoft Windows.<br><br>
 
 <li>Package installation available for Linux and FreeBSD.<br><br>
 
-<li>Supports qmail virtualdomains including vpopmail and vmailmgr.<br><br>
+<li>Supports vpopmail and vmailmgr.<br><br>
 
-<li>Supports matching patterns using Unix shell-style wildcard characters.<br><br>
+<li>Pattern matching using Unix shell-style wildcard characters.<br><br>
 
 <li>Optional delivery logging.<br><br>
 
